# loki-cpp

./: .ccls  .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  example.cpp  install-yay  loki-cpp.pc.in  main.cpp
.github/workflows/: ccpp.yml
benchmarks/: CMakeLists.txt  main.cpp  parser.cpp
include/: agent.hpp  builder.hpp  common.hpp  parser.hpp  query.hpp  registry.hpp  stream.hpp
include/detail/: utils.hpp
src/: agent.cpp  builder.cpp  common.cpp  parser.cpp  query.cpp  registry.cpp  stream.cpp
src/detail/: utils.cpp
tests/: CMakeLists.txt  json_escape_tests.cpp  main.cpp  parser.cpp
